# Worktime-Calculator

./: .gitignore  pyproject.toml  work_time_calculator.py
test/: work_time_calculator_test.py
tests/: work_time_calculator_tests.py
