[tool.poetry]
name = "Work Time Calculator"
version = "1.0.0"
description = ""
authors = ["Brian Grant <brian@skeletonjack.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest-pythonpath = "^0.7.3"
pytest-cov = "^2.11.1"
pytest-watch = "^4.2.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
junit_family = "xunit1"
junit_suite_name = "Work Time Calculator"
testpaths = "test"
python_paths = "."

